--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
+    <%= notice %>
     <%= yield %>
+
+    
+    <footer>
+      <span>&copy; PPT 版權所有</span>
+    </footer>
   </body>
 </html>
