--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -13,6 +13,12 @@
   
 <ul>
   <% @boards.each do |board| %>
-    <li><%= board.title %></li>
+    <!-- <li><%= link_to board.title, '/board/#{board.id}' %></li> -->
+    <li>
+      <%= link_to board.title, board_path(board) %>
+      <%= link_to '編輯', edit_board_path(board) %>
+      <%= link_to '刪除', board_path(board), method: 'delete', data: {confirm: '確認刪除？'} %>
+    </li>
+    <!-- <li><%= link_to board.title, board %></li> -->
   <% end %>
 </ul>
