--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,4 +1,10 @@
 <h1>快來 <%= @board.title %></h1> 
-<br>
+<h2>
+  <%= link_to "新增文章", new_board_post_path(@board) %>
+</h2>
 
-<%= link_to "新增文章", new_board_post_path(@board) %>
+<ul>
+  <% @posts.each do |post| %>
+  <li class="posts-list"><%= post.title %></li>
+  <% end %>
+</ul>
