--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,10 +1,31 @@
-<h1>快來 <%= @board.title %></h1> 
-<h2>
-  <%= link_to "新增文章", new_board_post_path(@board) %>
-</h2>
+<div class="container">
+  <h1>看板：<%= @board.title %></h1> 
+  <h2>
+    <%= link_to "新增文章", new_board_post_path(@board) %>
+  </h2>
 
-<ul>
-  <% @posts.each do |post| %>
-  <li class="posts-list"><%= post.title %></li>
-  <% end %>
-</ul>
+  <table>
+    <thead>
+      <tr>
+        <th>編號</th>
+        <th>作者</th>
+        <th>文章標題</th>
+        <th colspan="2"></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @posts.each do |post| %>
+        <tr>
+          <td><%= post.id %></td>
+          <td></td>
+          <td><%= link_to post.title, post %></td>
+          <td><%= link_to "編輯", post %></td>
+          <td><%= link_to "刪除", post %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <p><%= link_to "回首頁", root_path %></p>
+</div>
