--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= yield %>
 
     
-    <footer>
+    <footer class="container">
       <span>&copy; PPT 版權所有</span>
     </footer>
   </body>
