--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,5 @@
-<h1>--<%= @board.title %>--新增文章--</h1>
-
-<%= render "form", post: @post %>
+<div class="container">
+  <h1>--<%= @board.title %> 新增文章--</h1>
+  
+  <%= render "form", post: @post %>
+</div>
