--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,14 @@
   </head>
 
   <body>
-    <%= notice %>
-    <%= yield %>
-
-    
-    <footer class="container">
-      <span>&copy; PPT 版權所有</span>
-    </footer>
+    <div class="container">
+      <%= notice %>
+      <%= yield %>
+  
+      
+      <footer>
+        <span>&copy; PPT 版權所有</span>
+      </footer>
+    </div>
   </body>
 </html>
