--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -1,12 +1,13 @@
 body {
   background-color: #000;
+  color: #fff;
 }
 
 .container {
   max-width: 1000px;
   margin: 0 auto;
   text-align: center;
-  color: #fff;
+  // color: #fff;
 }
 
 a {
