--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,9 @@
   <h1>
     <%= @post.title %>
   </h1>
+  <p>
+    <%= @post.serial %>
+  </p>
   <br>
     <%= link_to "編輯", @post %>
     <%= link_to "刪除", @post %>
