--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -4,7 +4,7 @@ body {
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 500px;
   margin: 0 auto;
   text-align: center;
   // color: #fff;
@@ -22,6 +22,18 @@ a:hover {
 
 p {
   font-size: 26px;
+}
+
+.row {
+  display: flex;
+}
+.links {
+  margin-left: 30px;
+}
+.links:first-child {
+  // outline: 1px solid #faa;
+  margin-left: 0;
+  margin-right: auto;
 }
 
 form {
