--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <%= yield %>
   
       
-      <footer>
+      <footer class="row">
         <span>&copy; PPT 版權所有</span>
       </footer>
     </div>
