--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,55 @@
-<h1>
-  hello world
-</h1>
+<header class="row">
+  <div class="locate">【主功能表】</div>
+  <h1>批批踢實業坊</h1>
+</header>
+
+<div class="banner row">
+  <%= image_tag("message_board.png") %>
+</div>
+
+<div class="divider row">
+  <span>上方為使用者心情點播留言區，不代表本站立場</span>
+</div>
+
+<nav class="row">
+  <div class="links col-12"><a href="#">
+    <p class="en">(<span class="hotkey">A</span>)nnounce</p>
+    <p class="zh">【 精華公佈欄 】</p>
+  </a></div>
+  <div class="links col-12"><a href="#">
+    <p class="en">(<span class="hotkey">F</span>)avourite</p>
+    <p class="zh">【 我 的 最 愛 】</p>
+  </a></div>
+  <div class="links col-12"><a href="/boards">
+    <p class="en">(<span class="hotkey">C</span>)lass</p>
+    <p class="zh">【 分組討論區 】</p>
+  </a></div>
+  <div class="links col-12"><a href="#">
+    <p class="en">(<span class="hotkey">M</span>)ail</p>
+    <p class="zh">【 私人信件區 】</p>
+  </a></div>
+  <div class="links col-12"><a href="#">
+    <p class="en">(<span class="hotkey">T</span>)alk</p>
+    <p class="zh">【 休閒聊天區 】</p>
+  </a></div>
+  <div class="links col-12"><a href="#">
+    <p class="en">(<span class="hotkey">U</span>)ser</p>
+    <p class="zh">【 個人設定區 】</p>
+  </a></div>
+  <div class="links col-12"><a href="#">
+    <p class="en">(<span class="hotkey">X</span>)yz</p>
+    <p class="zh">【 系統資訊區 】</p>
+  </a></div>
+  <div class="links col-12"><a href="#">
+    <p class="en">(<span class="hotkey">P</span>)lay</p>
+    <p class="zh">【 娛樂與休閒 】</p>
+  </a></div>
+  <div class="links col-12"><a href="#">
+    <p class="en">(<span class="hotkey">N</span>)amelist</p>
+    <p class="zh">【 編特別名單 】</p>
+  </a></div>
+  <div class="links col-12"><a href="#">
+    <p class="en">(<span class="hotkey">G</span>)oodbye</p>
+    <p class="zh">離開，再見</p>
+  </a></div>
+</nav>
