--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -1,15 +1,3 @@
-body {
-  background-color: #000;
-  color: #fff;
-}
-
-.container {
-  max-width: 500px;
-  margin: 0 auto;
-  text-align: center;
-  // color: #fff;
-}
-
 a {
   color: #ffa;
   text-decoration: none;
@@ -68,7 +56,7 @@ table {
   font-size: 24px;
   border-collapse: collapse;
   text-align: center;
-  margin: auto;
+  margin: 0 auto 50px;
 
   th, td {
     padding: 5px 10px;
@@ -79,10 +67,4 @@ table {
     font-size: 20px;
     font-weight: 400;
   }
-}
-
-
-footer {
-  // outline: 1px solid #faa;
-  padding-top: 30px;
 }
