--- a/app/views/users/sign_up.html.erb
+++ b/app/views/users/sign_up.html.erb
@@ -7,7 +7,7 @@
   </ul>
 <% end %>
 
-<%= form_with(model: @user, url: :sing_out_users, local: true) do |f| %>
+<%= form_for(@user) do |f| %>
 
   <div>
     <%= f.label :account, "帳號" %>
@@ -39,8 +39,8 @@
     <%= f.text_field :gender %>
   </div>
 
-  <div>
-    <%= f.submit "送出" %>
+  <div class="submit">
+    <%= f.submit "註冊" %>
   </div>
 
 <% end %>
