Add User sign in and sign out

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,6 +30,17 @@ body {
   padding: 30px 0;
 }
 
+.notice {
+  color: #000;
+  font-weight: 900;
+  width: 50%;
+  height: 20%;
+  position: absolute;
+  top: 4rem;
+  right: 0;
+  left: 0;
+  margin: auto;
+}
 
 footer.row {
   justify-content: center;
