--- a/app/views/users/sign_in.html.erb
+++ b/app/views/users/sign_in.html.erb
@@ -1,1 +1,17 @@
 <h1>安安你好請登入</h1>
+
+<%= form_for(@user, url: login_users_path) do |f| %>
+  <div>
+    <%= f.label :account, "帳號" %>
+    <%= f.text_field :account, placeholder: "請輸入帳號或 email" %>
+  </div>
+
+  <div>
+    <%= f.label :password, "密碼" %>
+    <%= f.password_field :password %>
+  </div>
+
+  <div>
+    <%= f.submit "登入" %>
+  </div>
+<% end %>
