--- a/app/views/shared/frontend/_navbar.html.erb
+++ b/app/views/shared/frontend/_navbar.html.erb
@@ -4,12 +4,12 @@
   <h1>批批踢實業坊</h1>
   <nav>
     <ul>
-      <% if session[:user_token] %>
-      <li><%= @current_user.account %></li>
-      <li>登出</li>
+      <% if user_signed_in? %>
+        <li><%= current_user.account %></li>
+        <li><%= link_to "登出", :sign_out_users, method: :delete %></li>
       <% else %>
-      <li>登入</li>
-      <li>註冊</li>
+        <li><%= link_to "登入", :sign_in_users %></li>
+        <li><%= link_to "註冊", :sign_up_users %></li>
       <% end %>
     </ul>
   </nav>
