--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,7 +30,7 @@ body {
   padding: 30px 0;
 }
 
-.notice {
+/* .notice {
   color: #000;
   font-weight: 900;
   width: 50%;
@@ -39,7 +39,7 @@ body {
   right: 0;
   left: 0;
   margin: auto;
-}
+} */
 
 footer.row {
   justify-content: center;
