--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,38 @@
-<div class="container">
-  <h1>
-    <%= @post.title %>
-  </h1>
+<div class="container post-show">
+  <ul>
+    <li class="author-board">
+      <div>
+        <span>作者</span>
+        <span><%= @post.user.account %></span>
+      </div>
+      <div>
+        <span>看板</span>
+        <span><%= @post.board.title %></span>
+      </div>
+    </li>
+    <li>
+      <span>標題</span>
+      <span><%= @post.title %></span>
+    </li>
+    <li>
+      <span>時間</span>
+      <span><%= @post.updated_at %></span>
+    </li>
+  </ul>
+
+  <hr>
+  
   <p>
-    <%= @post.serial %>
+    <%= @post.content %>
   </p>
+
   <br>
-    <%= link_to "編輯", @post %>
+
+  <div>
+    <%= link_to "編輯", :edit_post %>
     <%= link_to "刪除", @post %>
-  <p>
+  </div>
+  <div>
     <%= link_to "回看板", board_path(@board) %>
-  </p>
+  </div>
 </div>
