--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,5 @@
 <div class="banner row">
-  <%= image_tag("message_board.png") %>
+  <%= image_pack_tag("message_board.png") %>
 </div>
 
 <div class="divider row">
