--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,5 +1,6 @@
-<div class="container">
-  <h1>看板：<%= @board.title %></h1> 
+<div class="container board-show">
+  <%#= @board.title %><%#= link_to "我的最愛", favorites_path(id: @board.id), method: :post %>
+  <h1>看板：<%= @board.title %><%= link_to "我的最愛", :favorite_board, method: :post %></h1>
   <p>[版主：<%= display_bm(@board) %>]</p>
   <h2>
     <%= link_to "新增文章", new_board_post_path(@board) %>
