--- a/app/frontend/stylesheets/boards.scss
+++ b/app/frontend/stylesheets/boards.scss
@@ -4,7 +4,9 @@
 .board-show h1 {
   position: relative;
 }
-.board-show h1 a {
+
+
+.favorite-board {
   font-size: 20px;
   line-height: 2.5em;
   position: absolute;
