--- a/app/frontend/stylesheets/index.scss
+++ b/app/frontend/stylesheets/index.scss
@@ -1,3 +1,27 @@
+body {
+  background-color: #000;
+  color: #ccc;
+  padding: 30px 0;
+}
+
+footer.row {
+  justify-content: center;
+  background-color: #c0c0c0;
+}
+footer span {
+  color: #555;
+  font-size: 24px;
+  line-height: 100%;
+}
+
+
+
+.my-boards li {
+  font-size: 30px;
+}
+
+
+
 header {
   background-color: #082081;
 }
@@ -107,3 +131,4 @@ nav a:hover p.en::before {
   position: absolute;
   left: -30px;
 }
+
