--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -3,10 +3,14 @@
   <h1>看板：
     <%= @board.title %>
 
-    <div class="favorite-board" data-controller="heart">
-      <%= link_to "我的最愛", :favorite_board, method: :post %>
+    <div class="favorite-board" data-controller="heart" data-heart-board="<%= @board.id %>">
+      <%#= link_to "我的最愛", :favorite_board, method: :post %>
       <button data-action="heart#favorite">
-        <i class="far fa-heart" data-target="heart.heart"></i>
+        <% if @board.favorited_by?(current_user) %>
+          <i class="fas fa-heart" data-target="heart.heart"></i>
+        <% else %>
+          <i class="far fa-heart" data-target="heart.heart"></i>
+        <% end %>
       </button>
     </div>
   </h1>
@@ -27,11 +31,11 @@
 
     <tbody>
       <% @posts.each do |post| %>
-        <tr>
+        <tr data-controller="post" data-action="cat@window->post#something">
           <td><%= post.id %></td>
           <%#= post.user.try(:account) %>
           <td><%= post.display_username %></td>
-          <td><%= link_to post.title, post %></td>
+          <td><%= link_to post.title, post, data: {target: "post.title"} %></td>
           <td><%= link_to "編輯", :edit_post %></td>
           <td><%= link_to "刪除", post %></td>
         </tr>
