webpacker:install:vue

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,10 @@
+<!-- <div id="hello"> -->
+<div id="app">
+  <!-- {{ message }} -->
+  <App>></App>
+</div>
+
+
 <div class="banner row">
   <%= image_pack_tag("message_board.png") %>
 </div>
