tried some vue components

--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,5 +1,9 @@
 <div class="container">
   <h1>所有看板<h1>
+
+  <div id="board">
+      <Board></Board>
+  </div>
   
   <!-- <a href="/boards/new">新增看板1</a> -->
   <!-- <a href="<% new_board_path %>">新增看板2</a> -->
