--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <%# webpacker %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'vue', 'data-turbolinks-track': 'reload' %>
+    <%# javascript_pack_tag 'board', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
