--- a/app/frontend/stylesheets/index.scss
+++ b/app/frontend/stylesheets/index.scss
@@ -135,3 +135,16 @@ nav a:hover p.en::before {
   left: -30px;
 }
 
+nav.pagination {
+  display: flex;
+  justify-content: center;
+
+  span {
+    min-width: 30px;
+    font-size: 24px;
+    // border: 1px solid #fff;
+    // border-radius: 10px;
+    padding: 2px;
+    margin-right: 5px;
+  }
+}
