--- a/app/views/pages/pricing.html.erb
+++ b/app/views/pages/pricing.html.erb
@@ -2,10 +2,10 @@
 
 <ul>
   <li>
-    <%= link_to "Plan A (5 元)", payment_path(plan: "a") %>
+    <%= link_to "Plan A (#{ENV['plan_a_price']} 元)", payment_path(plan: "a") %>
   </li>
   <li>
-    <%= link_to "Plan B (20 元)", payment_path(plan: "b") %>
+    <%= link_to "Plan B (#{ENV['plan_b_price']} 元)", payment_path(plan: "b") %>
   </li>
 </ul>
 
