--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -19,6 +19,16 @@
   </div>
 
   <div class="field">
+    <%= f.label :hello %>
+    <%= f.rich_text_area :hello %>
+  </div>
+
+  <div class="field">
+    <%= f.label :photo, "附件" %>
+    <%= f.file_field :photo %>
+  </div>
+
+  <div class="field">
     <%= f.label :board_id, "看板編號" %>
     <%= post.board_id %>
   </div>
