--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,6 +24,10 @@
   
   <p>
     <%= @post.content %>
+    <br>
+    <%= @post.hello %>
+    <br>
+    <%= image_tag @post.photo.variant(resize_to_limit: [600, 400]) if @post.photo.attached? %>
   </p>
 
   <br>
