--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -15,6 +15,7 @@
     </div>
   </h1>
   <p>[版主：<%= display_bm(@board) %>]</p>
+  <p><%= raw @intro %></p>
   <h2>
     <%= link_to "新增文章", new_board_post_path(@board) %>
   </h2>
